# NISwGSP_android

./: my_update.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/my_stitcher/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/niswgsp_1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: APAP_Stitching.cpp  APAP_Stitching.h  APAP_Stitching.hpp  CMakeLists.txt  FeatureController.cpp  MultiImages.cpp  MultiImages.h  MultiImages.hpp  NISwGSP_Stitching.cpp  NISwGSP_Stitching.h  NISwGSP_Stitching.hpp  SIFT_Features.cpp  SIFT_Features.hpp  SIFT_features.hpp  Transform.cpp  Transform.h  apap_stitching.cpp  apap_stitching.hpp  common.cpp  common.h  entry.cpp  entry.hpp  get_features.cpp  get_features.hpp  native-lib.cpp
app/src/main/cpp/Feature/: ImageData.cpp  ImageData.h  MultiImages.cpp  MultiImages.h
app/src/main/cpp/Stitch/: Homographies.cpp  MyStitching.cpp  MyStitching.h  My_Stitching.cpp  NISwGSP_Stitching.cpp  OpenCV_Stitching.cpp
app/src/main/cpp/Triangulation/: CDT.cpp  CDT.h
app/src/main/cpp/Util/: Blending.cpp  Blending.h  Similarity.cpp  Similarity.h
app/src/main/cpp/eigen_323c052e1731/unsupported/Eigen/CXX11/src/Tensor/: TensorReduction.h
app/src/main/cpp/eigen_323c052e1731/unsupported/Eigen/src/IterativeSolvers/: IterationController.h
app/src/main/java/com/example/my_stitcher/: CustomCamera1.java  CustomCamera2.java  CustomCamera3.java  MainActivity.java  Translation.java
app/src/main/java/com/example/niswgsp_1/: CustomCamera.java  CustomCamera1.java  CustomCamera2.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  custom_camera.xml  custom_camera_3.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/my_stitcher/: ExampleUnitTest.java
app/src/test/java/com/example/niswgsp_1/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
